--- a/basicfacear/basicfacear/nextrey.rcproject/com.apple.RCFoundation.Project
+++ b/basicfacear/basicfacear/nextrey.rcproject/com.apple.RCFoundation.Project
@@ -53,7 +53,7 @@
                           "message",
                           {
                             "typeName" : "String",
-                            "value" : "Hello, world!"
+                            "value" : ""
                           }
                         ],
                         [
